Version 0.4-1:

  - large simulated census data set for examples and illustrations in the SIGIL course


Version 0.4-0:

  - re-launch of the corpora package on R-Forge
  - first version 0.4-0 has only minor changes over previous release 0.3-2
