@@ -1,4 +1,4 @@
 export(z.score, z.score.pval, binom.pval, prop.cint)
-export(cont.table)
+export(cont.table, sample.df)
 export(chisq, chisq.pval, fisher.pval)
-export(simulated.census)
+export(simulated.census, simulated.wikipedia)
